Do not consider pending queries as idle work in passthrough decoder

Pending queries are processed separately from idle work so this is
redundant. However, removing this avoids the polling interval override
in CommandBufferStub::ScheduleDelayedWork, and prevents back to back
tasks being posted until queries are retired. This shows up as hundreds
of GPU tasks per frame in tough_compositor_cases.

Bug: 844262
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I4333261b00c2f95f87553aba10d72966928a8337
Reviewed-on: https://chromium-review.googlesource.com/1065232
Reviewed-by: Geoff Lang <geofflang@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Sunny Sachanandani <sunnyps@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560043}